[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# Project configuration.
[project]
name = "stable_gym"
dynamic = ["version", "readme"]
authors = [
    {name = "Rick Staa", email = "rick.staa@outlook.com"}
]
license = {file = "LICENSE"}
description = "A package that contains several gymnasium environments with cost functions compatible with (stable) RL agents (i.e. positive definite)."
keywords = [
    "reinforcement-learning",
    "simulation",
    "stability",
    "openai-gym",
    "gym-environments",
    "gymnasium",
    "gymnasium-environments"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "gymnasium",
    "gymnasium[classic_control]",
    "matplotlib",
    "iteration_utilities"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "syrupy",
    "flake8",
    "black",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "myst_parser",
    "sphinx-autoapi"
]

[project.urls]
repository = "https://github.com/rickstaa/stable-gym"
source = "https://github.com/rickstaa/stable-gym"
documentation = "https://rickstaa.dev/stable-gym"

# Python tools configuration.
[tool.setuptools]
packages = ["stable_gym"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content_type = "text/markdown"}

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
