# NOTE: Ensure you have pip>=21.3.1 when you want to install this package in editable mode.
[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# Project configuration.
[project]
name = "stable_gym"
dynamic = ["version", "readme"]
authors = [{ name = "Rick Staa", email = "rick.staa@outlook.com" }]
license = { file = "LICENSE" }
description = "A package that contains several gymnasium environments with cost functions compatible with (stable) RL agents (i.e. positive definite)."
keywords = [
    "reinforcement-learning",
    "simulation",
    "stability",
    "openai-gym",
    "gym-environments",
    "gymnasium",
    "gymnasium-environments",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.23.5",
    "gymnasium>=0.29.1",
    "gymnasium[classic_control]>=0.29.1",
    "gymnasium[mujoco]>=0.29.1",
    "gymnasium-robotics>=1.2.2",
    "mujoco==3.1.6", # TODO: Can be removed when https://github.com/Farama-Foundation/Gymnasium/pull/746 is released. # noqa: E501
    "matplotlib>=3.7.1",
    "iteration_utilities>=0.11.0",
    "pybullet>=3.2.5",
    "PyFlyt>=0.8.4",
    "gym==0.25.1", # TODO: Can be removed when https://github.com/bulletphysics/bullet3/issues/4369 is resolved. # noqa: E501
]
requires-python = ">=3.8"

[project.optional-dependencies]
# NOTE: Ensure you have pip>=21.2 for the recursive dependencies to work.
dev = [
    "pytest>=7.3.2",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "syrupy>=4.0.2",
    "flake8>=6.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=7.1.2",
    "sphinx_rtd_theme>=1.3.0",
    "myst-parser>=1.0.0",
    "sphinx-autoapi>=2.1.1",
]

[project.urls]
repository = "https://github.com/rickstaa/stable-gym"
source = "https://github.com/rickstaa/stable-gym"
documentation = "https://rickstaa.dev/stable-gym"

# Python tools configuration.
[tool.setuptools]
packages = ["stable_gym"]

[tool.setuptools.dynamic]
readme = { file = "README.md", content_type = "text/markdown" }

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
