[metadata]
name = simzoo
version = 0.5.3
description = A python package containing the bayesian_learning_control openai gym environments.
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type=text/markdown
author = Rick Staa
author_email = rick.staa@outlook.com
url = https://github.com/rickstaa/simzoo
keywords = rl, openai gym
license = Rick Staa copyright
license_file = LICENSE
classifiers =
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering"

[options]
packages = find:
include_package_data = True
install_requires =
    gym
    matplotlib
    iteration_utilities
python_requires = >=3.5

[options.extras_require]
all =
    %(dev)s
    %(build)s
dev =
    pytest
    pytest-cov
    pytest-html
    flake8
    black
build =
    gym=>0.24.0
    matplotlib==3.7.0

[flake8]
max-line-length = 88
ignore = E266, W503
